Change styling to avoid stretching cover images in posts

--- a/assets/css/extended/posts.css
+++ b/assets/css/extended/posts.css
@@ -1,3 +1,8 @@
+article.post-single figure.entry-cover img {
+  margin: auto;
+  width: unset;
+}
+
 .post-content p.intro-note {
   font-size: 15px;
   font-style: italic;
